--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,13 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.hsqldb</groupId>
+     <artifactId>hsqldb</artifactId>
+     <version>2.5.0</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
