feat: enhance member management functionality, add member node structure, and update repository interactions

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # Spring application configuration
 # In Docker Compose, the DB host should be 'mysql' (the compose service name)
 # For pure local runs, the default URL falls back to '127.0.0.1' as encoded in application.properties
-SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/LMS?useSSL=false&serverTimezone=UTC
+SPRING_DATASOURCE_URL=jdbc:mysql://loaclhost:3306/LMS?useSSL=false&serverTimezone=UTC
 SPRING_DATASOURCE_USERNAME=username
 SPRING_DATASOURCE_PASSWORD=password
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
